fix:overflowY in home container

--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,7 @@ body{
 }
 .home-container{
     background:$base-color;
-    overflow-x:hidden !important;
+    overflow:hidden !important;
     
 }
 .logo{
